erpnext/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: erpnext-backend
  namespace: erp-dev
spec:
  selector:
    matchLabels:
      app: erpnext-backend
  serviceName: erpnext-backend
  template:
    metadata:
      labels:
        app: erpnext-backend
    spec:
      containers:
        - name: erpnext-socketio
          image: arnadeem/erpnext-hrms:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              node /home/frappe/frappe-bench/apps/frappe/socketio.js
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /home/frappe/frappe-bench/sites
              name: erpnext-storage
        - name: erpnext-backend
          image: arnadeem/erpnext-hrms:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /home/frappe/frappe-bench/sites
              name: erpnext-storage
        - name: queue-long
          image: arnadeem/erpnext-hrms:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              bench worker --queue long,default,short
          volumeMounts:
            - mountPath: /home/frappe/frappe-bench/sites
              name: erpnext-storage
        - name: queue-short
          image: arnadeem/erpnext-hrms:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              bench worker --queue short,default
          volumeMounts:
            - mountPath: /home/frappe/frappe-bench/sites
              name: erpnext-storage
        - name: scheduler
          image: arnadeem/erpnext-hrms:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              bench schedule
          volumeMounts:
            - mountPath: /home/frappe/frappe-bench/sites
              name: erpnext-storage
      volumes:
        - name: erpnext-site
          configMap:
            name: erpnext-config
            items:
              - key: common_site_config.json
                path: common_site_config.json
        - name: erpnext-storage
          persistentVolumeClaim:
            claimName: erpnext-storage
        - name: erpnext-logs
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: erpnext-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 8Gi

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: erpnext-frontend
  namespace: erp-dev
spec:
  selector:
    matchLabels:
      app: erpnext-frontend
  serviceName: erpnext-frontend
  template:
    metadata:
      labels:
        app: erpnext-frontend
    spec:
      containers:
        - name: erpnext-frontend
          image: arnadeem/erpnext-hrms:latest
          command:
            - nginx-entrypoint.sh
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/frappe/frappe-bench/sites
              name: erpnext-storage
      volumes:
        - name: erpnext-site
          configMap:
            name: erpnext-config
            items:
              - key: common_site_config.json
                path: common_site_config.json
        - name: erpnext-storage
          persistentVolumeClaim:
            claimName: erpnext-storage
        - name: erpnext-logs
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: erpnext-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 8Gi
