erpnext/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: erpnext
  namespace: erp-dev
spec:
  selector:
    app: erpnext-frontend
  ports:
    - port: 8080
      targetPort: 8080
      name: frontend
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: erpnext-backend
  namespace: erp-dev
spec:
  selector:
    app: erpnext-backend
  ports:
    - port: 8000
      targetPort: 8000
      name: backend
    - port: 9000
      targetPort: 9000
      name: socketio
  type: ClusterIP
