erpnext/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpnext-ingress
  namespace: erp-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - erp-dev.amoaman.com
    secretName: erp-dev-tls-cert  # Cert-Manager créera ce secret automatiquement
  rules:
  - host: erp-dev.amoaman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frappe-bench-erpnext
            port:
              number: 8080
